--- a/trunk/green/build.xml
+++ b/trunk/green/build.xml
@@ -63,7 +63,7 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-    <target name="EntireSuite (1)">
+    <target name="EntireSuite">
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
