--- a/trunk/green/.classpath
+++ b/trunk/green/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/Users/jaco/Documents/workspace/green/lib/junit_4.8.2.jar"/>
+	<classpathentry kind="lib" path="/Users/jaco/Documents/workspace/green/lib/org.hamcrest.core_1.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
