--- a/trunk/green/build.xml
+++ b/trunk/green/build.xml
@@ -23,6 +23,8 @@
         <pathelement location="bin"/>
         <pathelement location="lib/junit_4.8.2.jar"/>
         <pathelement location="lib/org.hamcrest.core_1.1.0.jar"/>
+        <pathelement location="lib/choco-solver-2.1.3.jar"/>
+        <pathelement location="lib/libcvc3.jar"/>
     </path>
 
 <!--
