--- a/trunk/green/.classpath
+++ b/trunk/green/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/org.hamcrest.core_1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/junit_4.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/choco-solver-2.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jedis-2.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
