Added a KLEE KQuery parser.  At the moment it only parses kqueries without implementing any of their semantics.

--- a/green/build.xml
+++ b/green/build.xml
@@ -107,6 +107,7 @@
                 <exclude name="${junit.dir}"/>
             </fileset>
             <fileset dir="src"/>
+            <fileset dir="test"/>
         </jar>
     </target>
 
