--- a/green/build.xml
+++ b/green/build.xml
@@ -29,6 +29,10 @@
         <pathelement location="lib/commons-exec-1.2.jar"/>
         <pathelement location="lib/junit_4.8.2.jar"/>
         <pathelement location="lib/org.hamcrest.core_1.1.0.jar"/>
+    	<pathelement location="lib/choco-solver-3.3.1.jar"/>
+    	<pathelement location="lib/slf4j-api-1.7.12.jar"/>
+    	<pathelement location="lib/slf4j-simple-1.7.12.jar"/>
+    	<pathelement location="lib/trove-3.1a1.jar"/>
         <pathelement location="lib/choco-solver-2.1.3.jar"/>
         <pathelement location="lib/libcvc3.jar"/>
         <pathelement location="lib/com.microsoft.z3.jar"/>
