More robust library loading.

--- a/green/build.xml
+++ b/green/build.xml
@@ -93,12 +93,14 @@
 -->
 
     <target name="test">
+    	<echo message="java.library.path = ${z3lib};${cvc3lib}"/>
         <mkdir dir="${junit.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
             <test name="za.ac.sun.cs.green.EntireSuite" todir="${junit.dir}"/>
-            <env key="DYLD_LIBRARY_PATH" value="lib/macosx"/>
-            <env key="LD_LIBRARY_PATH" value="lib/linux"/>
+            <env key="DYLD_LIBRARY_PATH" value="lib"/>
+            <env key="LD_LIBRARY_PATH" value="lib"/>
+            <sysproperty key="java.library.path" value="${z3lib}:${cvc3lib}"/>
             <classpath refid="green.classpath"/>
         </junit>
         <junitreport todir="${junit.dir}">
